# Fitness-Tracker

./: .dockerignore  Dockerfile  README.md  config.json  pyproject.toml  workout_programs.yml
.github/workflows/: fitness-tracker-wf.yml
data/: db.json  real_disciplines.json  sim_db.json
data/log_archive/JSON/2022/April/: legs_training_log_2022-04-19.json  legs_training_log_2022-04-29.json  pull_training_log_2022-04-16.json  pull_training_log_2022-04-21.json  push_training_log_2022-04-20.json  push_training_log_2022-04-30.json
data/log_archive/JSON/2022/July/: chest_and_back_training_log_2022-07-01.json  chest_and_back_training_log_2022-07-08.json  chest_and_back_training_log_2022-07-16.json  chest_and_back_training_log_2022-07-20.json  legs_and_abs_training_log_2022-07-02.json  legs_and_abs_training_log_2022-07-12.json  legs_and_abs_training_log_2022-07-17.json  (+4 more)
docs/source/: src.CRUD.rst  src.helpers.rst
features/steps/: lookup.py  model.py  test_data_validate.json
src/: main.py  openapi2html.py  plot.py
src/CRUD/: insert.py  read.py  training.py  update.py
src/helpers/: cleanup.py  get_exercises.py  json2csv.py  lookup.py  muscles_and_exercises.yaml  validate.py
src/model/: model.py  plot_model.py
src/orchestration/: real_flow.sh  simulation_flow.sh
src/simulations/: muscles_and_exercises_weight_ranges.yaml  simulate_data.py
test/: test_model.py  test_training.py
workout_templates/: legs_workout.html  legs_workout.md  pull_workout.html  pull_workout.md  push_workout.html  push_workout.md
workout_templates/components/: table.js
(+17 files in other folders)
