[tool.poetry]
name = "fitness-tracker"
version = "0.1.0"
description = ""
authors = ["Gustav Collin Rasmussen"]

[tool.poetry.dependencies]
python = "^3.10"
behave = "^1.2.6"
tinydb = "^4.7.0"
fastapi = "^0.78.0"
PyYAML = "^6.0"
pandas = "^1.4.3"
mypy = "^0.961"
yamllint = "^1.26.3"
pytest = "^7.1.2"
flake8 = "^4.0.1"
Sphinx = "^5.0.2"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"
watchfiles = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
